--- a/login.html
+++ b/login.html
@@ -54,16 +54,9 @@
   #btnRegistrar { background:#28a745; }
   #btnGoogle { background:#db4437; display:flex; justify-content:center; align-items:center; gap:.5rem; }
 
-  #google-icon {
-    width:20px;
-    height:20px;
-  }
+  #google-icon { width:20px; height:20px; }
 
-  #status {
-    margin-top:1rem;
-    font-size:.9rem;
-    color:#444;
-  }
+  #status { margin-top:1rem; font-size:.9rem; color:#444; }
 </style>
 </head>
 <body>
@@ -88,48 +81,34 @@
 <script type="module">
   import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-  // 🔥 SUA URL + PUBLIC ANON KEY
-  const supabase = createClient(
-    "https://ogosbyjhxjatukdhkiqw.supabase.co",
-    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9nb3NieWpoeGphdHVrZGhraXF3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzM5NzM5OTEsImV4cCI6MjA0OTU0OTk5MX0.s7eDt2S8KMdVbVj25Z4k6iRvK9ljHa9BIwLXal29GHI"
-  );
+  const SUPABASE_URL = "https://ogosbyjhxjatukdhkiqw.supabase.co";
+  const SUPABASE_ANON_KEY = "SUA_ANON_KEY_AQUI";
+
+  const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
   const statusBox = document.getElementById("status");
-
-  function msg(txt) {
-    statusBox.innerText = txt;
-  }
+  function msg(txt) { statusBox.innerText = txt; }
 
   // 🔵 LOGIN EMAIL/SENHA
   document.getElementById("btnEmailLogin").onclick = async () => {
     const email = document.getElementById("email").value;
     const senha = document.getElementById("senha").value;
-
     if (!email || !senha) return msg("Preencha email e senha.");
 
-    const { error } = await supabase.auth.signInWithPassword({
-      email,
-      password: senha
-    });
-
+    const { error } = await supabase.auth.signInWithPassword({ email, password: senha });
     if (error) return msg("Erro: " + error.message);
 
     msg("Entrando...");
-    window.location.href = "app.html";
+    window.location.href = "plans.html";
   };
 
   // 🟢 CRIAR CONTA
   document.getElementById("btnRegistrar").onclick = async () => {
     const email = document.getElementById("email").value;
     const senha = document.getElementById("senha").value;
-
     if (!email || !senha) return msg("Preencha email e senha.");
 
-    const { error } = await supabase.auth.signUp({
-      email,
-      password: senha
-    });
-
+    const { error } = await supabase.auth.signUp({ email, password: senha });
     if (error) return msg("Erro ao criar conta: " + error.message);
 
     msg("Conta criada! Verifique seu email e depois faça login.");
@@ -137,21 +116,16 @@
 
   // 🔴 LOGIN COM GOOGLE
   document.getElementById("btnGoogle").onclick = async () => {
-    const { data, error } = await supabase.auth.signInWithOAuth({
+    const { error } = await supabase.auth.signInWithOAuth({
       provider: "google",
-      options: {
-        redirectTo: "https://brasilloteca.github.io/mxdollar-seco/app.html"
-      }
+      options: { redirectTo: "https://brasilloteca.github.io/mxdollar-seco/plans.html" }
     });
-
     if (error) msg("Erro Google: " + error.message);
   };
 
-  // 🔒 Se já estiver logado → envia pro app
+  // 🔒 Se já estiver logado → envia pro plans.html
   const { data: sess } = await supabase.auth.getSession();
-  if (sess.session) {
-    window.location.href = "app.html";
-  }
+  if (sess.session) window.location.href = "plans.html";
 </script>
 
 </body>
