--- a/plans.html
+++ b/plans.html
@@ -5,7 +5,7 @@
   <title>Planos MX$</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.29.0/dist/supabase.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="https://js.stripe.com/v3/"></script>
 
   <style>
@@ -32,7 +32,7 @@
     .plans {
       max-width: 1000px;
       margin: 3rem auto;
-      display: grid;
+      display: none;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 1.5rem;
       padding: 0 1rem;
@@ -72,7 +72,7 @@
 
 <div id="loading" class="loading">Finalizando login...</div>
 
-<section id="plans" class="plans" style="display:none;">
+<section id="plans" class="plans">
   <div class="plan">
     <h2>Mensal</h2>
     <div class="price">R$ 49,90</div>
@@ -93,17 +93,21 @@
 </section>
 
 <script>
-  // Inicializa Supabase usando a sessão já ativa
-  const supabase = window.supabase.createClient(
+  const supabase = supabaseJs.createClient(
     "https://ogosbyjhxjatukdhkiqw.supabase.co",
-    "" // Chave anon não precisa aqui
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9nb3NieWpoeGphdHVrZGhraXF3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzM5NzM5OTEsImV4cCI6MjA0OTU0OTk5MX0.s7eDt2S8KMdVbVj25Z4k6iRvK9ljHa9BIwLXal29GHI",
+    {
+      auth: {
+        persistSession: true,
+        detectSessionInUrl: true
+      }
+    }
   );
 
   async function init() {
     const { data } = await supabase.auth.getSession();
 
     if (!data.session) {
-      // Sem sessão ativa → volta pro login
       window.location.href = "login.html";
       return;
     }
@@ -111,16 +115,15 @@
     document.getElementById("loading").style.display = "none";
     document.getElementById("plans").style.display = "grid";
 
-    const currentUser = data.session.user;
+    const user = data.session.user;
 
     document.querySelectorAll("button[data-price]").forEach(btn => {
-      btn.addEventListener("click", async () => {
+      btn.onclick = async () => {
         btn.disabled = true;
         btn.innerText = "Redirecionando...";
 
-        // Chamando função Supabase no backend que usa a ANON_KEY segura
         const res = await fetch(
-          `https://ogosbyjhxjatukdhkiqw.supabase.co/functions/v1/create-checkout-session-`,
+          "https://ogosbyjhxjatukdhkiqw.supabase.co/functions/v1/create-checkout-session",
           {
             method: "POST",
             headers: {
@@ -129,22 +132,22 @@
             },
             body: JSON.stringify({
               priceId: btn.dataset.price,
-              userId: currentUser.id
+              userId: user.id
             })
           }
         );
 
-        const checkout = await res.json();
+        const dataCheckout = await res.json();
 
-        if (checkout.sessionId) {
+        if (dataCheckout.sessionId) {
           const stripe = Stripe("SUA_PUBLIC_KEY_STRIPE");
-          stripe.redirectToCheckout({ sessionId: checkout.sessionId });
+          stripe.redirectToCheckout({ sessionId: dataCheckout.sessionId });
         } else {
           alert("Erro ao iniciar pagamento");
           btn.disabled = false;
           btn.innerText = "Assinar";
         }
-      });
+      };
     });
   }
 
