Fix authorization headers in checkout session request
Updated headers in the fetch request for checkout session to include apikey and use access_token.

--- a/plans.html
+++ b/plans.html
@@ -129,10 +129,10 @@
           {
             method: "POST",
             headers: {
-              "Content-Type": "application/json",
-              // 🔴 CORREÇÃO CRÍTICA AQUI
-              "Authorization": `Bearer ${SUPABASE_ANON_KEY}`
-            },
+  "Content-Type": "application/json",
+  "apikey": SUPABASE_ANON_KEY,
+  "Authorization": `Bearer ${data.session.access_token}`
+},
             body: JSON.stringify({
               priceId: btn.dataset.price,
               userId: user.id
